# python_dynamodb

./: main.py  pyproject.toml
