[tool.poetry]
name = "python-dynamodb"
version = "0.1.0"
description = ""
authors = ["alanjosue97 <perezaln.09@gmail.com>"]
readme = "README.md"
packages = [{include = "python_dynamodb"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.159"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
